6-Multi-services-Retry/configs/paytm/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paytm-app
spec:
  hosts:
  - paytm-svc.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/v2"
    route:
    - destination:
        host: paytm-svc.default.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: paytm-svc.default.svc.cluster.local
        subset: v1
    retries:
      attempts: 4
      perTryTimeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paytm-app
spec:
  host: paytm-svc.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: "v1"
  - name: v2
    labels:
      version: "v2"
